# RGBT_toolkit

./: .gitignore  README.md  __init__.py  eval_gtot.py  eval_lasher.py  eval_rgbt210.py  eval_rgbt234.py  pyproject.toml  test_gtot.py  test_lasher.py  test_rgbt210.py  test_rgbt234.py  utils.py
dataset/: __init__.py  basedataset.py  gtot_dataset.py  lasher_dataset.py  rgbt210_dataset.py  rgbt234_dataset.py
gt_file/LasHeR/: lashertest.txt
gt_file/LasHeR/AttriSeqsTxt/: 10phone_boy.txt  10rightboy.txt  10runone.txt  11leftboy.txt  11righttwoboy.txt  11runone.txt  1blackteacher.txt  1phoneblue.txt  1righttwogreen.txt  1strowleftboyturning.txt  1strowright1stboy.txt  1strowright2ndgirl.txt  1strowrightgirl3540.txt  1whiteteacher.txt  2boys.txt  2boyscome.txt  2boyscome245.txt  2girlup.txt  2ndblkboy1_quezhen.txt  2ndbus.txt  2ndcarcome.txt  2outdark.txt  2runseven.txt  2runsix.txt  2up.txt  3bike2.txt  3girl1.txt  3rdboy.txt  3rdgrouplastboy.txt  4boysbesidesblkcar.txt  5numone.txt  5one.txt  5runfour.txt  7one.txt  7rightredboy.txt  9handlowboy.txt  9hatboy.txt  AQgirlwalkinrain.txt  AQmanfromdarktrees.txt  AQmotomove.txt  (+334 more)
gt_file/LasHeR/lasher_gt/: 10crosswhite.txt  10phone_boy.txt  10rightboy.txt  11runthree.txt  11runtwo.txt  1blackteacher.txt  1handsth.txt  1phoneblue.txt  1rowleft2ndgirl.txt  1stcol4thboy.txt  1strowleftboyturning.txt  1strowright1stboy.txt  1strowright2ndgirl.txt  2boyscome.txt  (+594 more)
gt_file/RGBT210/: SequencesName.txt
metrics/: __init__.py  base.py  metrics.py
src/: eval_rgbt234.py
src/rgbt/: __init__.py  utils.py
vis/: plot.py  radar.py
(+1771 files in other folders)
