[build-system]
requires = [
    "hatchling",
    "numpy",
    "matplotlib"
]
build-backend = "hatchling.build"

[project]
name = "rgbt"
version = "1.0.0"
authors = [
  { name="zjc", email="2690598117@qq.com" },
]
description = "RGB-T toolkit for GTOT, RGBT210, RGBT234, LasHeR"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/opacity-black/RGBT_toolkit"
"Bug Tracker" = "https://github.com/opacity-black/RGBT_toolkit/issues"